--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <title>Rohit Mehta | UX Designer</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
       <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-      <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+      <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
+      <link rel="stylesheet" href="css/custom.css">
       <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
       <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     </head>
