cusmtom home and css

--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
     </head>
 
     <body>
+        <div class="container">
+            <h1>Rohit Mehta</h1>
+            <h3>Designer | 'Aadha' Developer | Full-time Observer</h3>
+            <p>I am a digital product desginer living in Pune, India.  
+                Currently I lead product design at Scandid, where we are trying to simplify shopping. Before that, I was creative associate - digital media &amp; technology Synechron and Interaction Designer at Aptify. I have spent last 4 years deisgning &amp; coding websites, mobile apps &amp; icons on various projects.
+            </p>
+            <h3>Get in touch</h3>
+            <ul>
+                <li><a href="mailto:rohit@rohitmehta.me">E-mail</a></li>
+                <li><a href="http://twitter.com/rohitrmehta" target="_new">@rohitrmehta</a></li>
+                <li><a href="http://dribbble.com/rohitrmehta" target="_new">Dribbble</a></li>
+                <li><a href="http://in.linkedin.com/in/rohitrmehta" target="_new">LinkedIn</a></li>
+            </ul>
+        </div>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
-        <script src="js/main.js"></script>
     </body>
 </html>
