--- a/index.html
+++ b/index.html
@@ -7,28 +7,39 @@
 
       <title>Rohit Mehta | UX Designer</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-      <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'>
+      <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'> -->
       <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
+      <link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/custom.css">
+      <link rel="stylesheet" href="css/animate.css">
       <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
       <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     </head>
 
     <body>
-        <div class="container">
-            <h1>Rohit Mehta</h1>
-            <h3>Designer | 'Aadha' Developer | Full-time Observer</h3>
-            <p>I am a digital product desginer living in Pune, India.  
-                Currently I lead product design at Scandid, where we are trying to simplify shopping. Before that, I was creative associate - digital media &amp; technology Synechron and Interaction Designer at Aptify. I have spent last 4 years deisgning &amp; coding websites, mobile apps &amp; icons on various projects.
+        <div class="container animated fadeInUp">
+            <h1 class="name">Rohit Mehta</h1>
+            <h3 class="title ">User Experience Designer</h3>
+            <p class="desc">I am a desginer leading product design at <a href="#" class="co-link">Scandid</a> - A personal shopping assistant. <br/> <br/>Previously, I was Creative Associate - Digital media &amp; Technology at Synechron and Interaction Designer at Aptify. I have spent last 4 years splitting time between deisgning, coding websites, android &amp; iOS apps and icons.
+            <br/><br/> I am also learning iOS Development &amp; Ruby
             </p>
-            <h3>Get in touch</h3>
-            <ul>
-                <li><a href="mailto:rohit@rohitmehta.me">E-mail</a></li>
-                <li><a href="http://twitter.com/rohitrmehta" target="_new">@rohitrmehta</a></li>
-                <li><a href="http://dribbble.com/rohitrmehta" target="_new">Dribbble</a></li>
-                <li><a href="http://in.linkedin.com/in/rohitrmehta" target="_new">LinkedIn</a></li>
+            <p class="git">Get in touch</p>
+            <ul class="git-block">
+                <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">&nbsp;</a></li>
+                <li class="twitter"><a href="http://twitter.com/rohitrmehta" alt="Follow me on Twitter @rohitrmehta" title="Follow me on Twitter @rohitrmehta" target="_new">&nbsp;</a></li>
+                <li class="dribbble"><a href="http://dribbble.com/rohitrmehta" alt="Follow my work on Dribbble @rohitrmehta" title="Follow my work on Dribbble @rohitrmehta" target="_new">&nbsp;</a></li>
+                <li class="linkedin"><a href="http://in.linkedin.com/in/rohitrmehta" alt="Connect with me on Linkedin" title="Connect with me on Linkedin" target="_new">&nbsp;</a></li>
             </ul>
         </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-27218902-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     </body>
 </html>
