chnages to site

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
       <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'> -->
       <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
-      <link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/custom.css">
-      <link rel="stylesheet" href="css/animate.css">
       <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
       <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     </head>
@@ -25,17 +23,17 @@
             </p>
             <p class="git">Get in touch</p>
             <ul class="git-block">
-                <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">&nbsp;</a></li>
-                <li class="twitter"><a href="http://twitter.com/rohitrmehta" alt="Follow me on Twitter @rohitrmehta" title="Follow me on Twitter @rohitrmehta" target="_new">&nbsp;</a></li>
-                <li class="dribbble"><a href="http://dribbble.com/rohitrmehta" alt="Follow my work on Dribbble @rohitrmehta" title="Follow my work on Dribbble @rohitrmehta" target="_new">&nbsp;</a></li>
-                <li class="linkedin"><a href="http://in.linkedin.com/in/rohitrmehta" alt="Connect with me on Linkedin" title="Connect with me on Linkedin" target="_new">&nbsp;</a></li>
+                <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">Mail</a></li>
+                <li class="twitter"><a href="http://twitter.com/rohitrmehta" alt="Follow me on Twitter @rohitrmehta" title="Follow me on Twitter @rohitrmehta" target="_new">Twitter</a></li>
+                <li class="dribbble"><a href="http://dribbble.com/rohitrmehta" alt="Follow my work on Dribbble @rohitrmehta" title="Follow my work on Dribbble @rohitrmehta" target="_new">Dribbble</a></li>
+                <li class="linkedin"><a href="http://in.linkedin.com/in/rohitrmehta" alt="Connect with me on Linkedin" title="Connect with me on Linkedin" target="_new">linkedin</a></li>
             </ul>
         </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-27218902-1', 'auto');
   ga('send', 'pageview');
