--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container animated fadeInUp">
             <h1 class="name">Rohit Mehta</h1>
             <h3 class="title ">User Experience Designer</h3>
-            <p class="desc">I am a desginer leading product design at <a href="#" class="co-link">Scandid</a> - A personal shopping assistant. <br/> <br/>Previously, I was Creative Associate - Digital media &amp; Technology at Synechron and Interaction Designer at Aptify. I have spent last 4 years splitting time between deisgning, coding websites, android &amp; iOS apps and icons.
+            <p class="desc">I am a designer leading product design at <a href="#" class="co-link">Scandid</a> - A personal shopping assistant. <br/> <br/>Previously, I was Creative Associate - Digital media &amp; Technology at Synechron and Interaction Designer at Aptify. I have spent last 4 years splitting time between deisgning, coding websites, android &amp; iOS apps and icons.
             <br/><br/> I am also learning iOS Development &amp; Ruby
             </p>
             <p class="git">Get in touch</p>
