--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p class="desc">I am a designer leading product design at <a href="#" class="co-link">Scandid</a> - A personal shopping assistant. <br/> <br/>Previously, I was Creative Associate - Digital media &amp; Technology at Synechron and Interaction Designer at Aptify. I have spent last 4 years splitting time between deisgning, coding websites, android &amp; iOS apps and icons.
             <br/><br/> I am also learning iOS Development &amp; Ruby
             </p>
+            <p><a href="https://twitter.com/search?q=%23May1Reboot&src=savs" target="_new">#May1Reboot</a></p>
             <p class="git">Get in touch</p>
             <ul class="git-block">
                 <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">Mail</a></li>
@@ -28,6 +29,7 @@
                 <li class="dribbble"><a href="http://dribbble.com/rohitrmehta" alt="Follow my work on Dribbble @rohitrmehta" title="Follow my work on Dribbble @rohitrmehta" target="_new">Dribbble</a></li>
                 <li class="linkedin"><a href="http://in.linkedin.com/in/rohitrmehta" alt="Connect with me on Linkedin" title="Connect with me on Linkedin" target="_new">linkedin</a></li>
             </ul>
+
         </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
