--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <title>Rohit Mehta | UX Designer</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
       <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
       <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
       <link rel="stylesheet" href="css/custom.css">
       <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -17,11 +18,10 @@
     <body>
         <div class="container animated fadeInUp">
             <h1 class="name">Rohit Mehta</h1>
-            <h3 class="title ">User Experience Designer</h3>
-            <p class="desc">I am a designer leading product design at <a href="#" class="co-link">Scandid</a> - A personal shopping assistant. <br/> <br/>Previously, I was Creative Associate - Digital media &amp; Technology at Synechron and Interaction Designer at Aptify. I have spent last 4 years splitting time between deisgning, coding websites, android &amp; iOS apps and icons.
-            <br/><br/> I am also learning iOS Development &amp; Ruby
+            <h3 class="title ">User Experience Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
+            <p class="desc">User experience designer based out of Toronto, Canada. <br/><br/>Currently looking for remote/full time/part time/contract roles. Ex-Olacabs, Ex-Scandid.
             </p>
-            <p><a href="https://twitter.com/search?q=%23May1Reboot&src=savs" target="_new">#May1Reboot</a></p>
+            <p class="new-web">New website coming soon...</p>
             <p class="git">Get in touch</p>
             <ul class="git-block">
                 <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">Mail</a></li>
