--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <h3 class="title ">User Experience Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
             <p class="desc">User experience designer based out of Toronto, Canada. <br/><br/>Currently looking for remote/full time/part time/contract roles. Ex-Olacabs, Ex-Scandid.
             </p>
-            <p class="new-web">New website coming soon...</p>
+            <p>Latest Case studies</p>
+            <ul>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp &apos s Loyalty Card Addition Feature.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
+            </ul>
             <p class="git">Get in touch</p>
             <ul class="git-block">
                 <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">Mail</a></li>
