--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <h3 class="title ">User Experience Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
             <p class="desc">User experience designer based out of Toronto, Canada. <br/><br/>Currently looking for remote/full time/part time/contract roles. Ex-Olacabs, Ex-Scandid.
             </p>
-            <p>Latest Case studies</p>
+            <p>Case studies</p>
             <ul>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp &apos s Loyalty Card Addition Feature.</a></li>
-                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
-                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
-                <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp’s Loyalty Card Addition Feature.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-2-designing-flipps-item-share-feature-f62ba5564fcd" target="_new">Case study — Designing Flipp’s Item Share Feature.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-3-designing-endless-browse-a36ed4faeaaf" target="_new">Case study — Designing Endless Browse.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/collection-of-my-ux-portfolio-a7c7d60b1067" target="_new">Collection of my design projects at Ola, Scandid</a></li>
             </ul>
             <p class="git">Get in touch</p>
             <ul class="git-block">
