--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <body>
         <div class="container animated fadeInUp">
             <h1 class="name">Rohit Mehta</h1>
-            <h3 class="title ">User Experience Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
-            <p class="desc">User experience designer based out of Toronto, Canada. <br/><br/>Currently looking for remote/full time/part time/contract roles. Ex-Olacabs, Ex-Scandid.
+            <h3 class="title ">Product Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
+            <p class="desc">Designer based out of Toronto, Canada. <br/>Currently, Senior Product Designer with Flipp. Ex-Olacabs, Ex-Scandid.
             </p>
             <h2>Case studies</h2>
             <ul class="case-study">
