--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
             <p class="git">Get in touch</p>
             <ul class="git-block">
-                <li class="resume"><a href="Rohit Mehta - Resume 2019 (1).pdf" target="_new" alt="Rohit Mehta's Resume" title="Rohit Mehta's Resume">Resume</a></li>
+                <li class="resume"><a href="RohitMehta-Resume.pdf" target="_new" alt="Rohit Mehta's Resume" title="Rohit Mehta's Resume">Resume</a></li>
                 <li class="email"><a href="mailto:rohit@rohitmehta.me" alt="Write to me on rohit@rohitmehta.me" title="Write to me on rohit@rohitmehta.me">Mail</a></li>
                 <li class="linkedin"><a href="http://linkedin.com/in/rohitrmehta" alt="Connect with me on Linkedin" title="Connect with me on Linkedin" target="_new">linkedin</a></li>
                 <li class="twitter"><a href="http://twitter.com/rohitrmehta" alt="Follow me on Twitter @rohitrmehta" title="Follow me on Twitter @rohitrmehta" target="_new">Twitter</a></li>
