--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="https://medium.com/@RohitRMehta/case-study-1-designing-flipps-loyalty-card-addition-feature-6dd8f9955d91" target="_new">Case study — Designing Flipp's Loyalty Card Addition Feature.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-2-designing-flipps-item-share-feature-f62ba5564fcd" target="_new">Case study — Designing Flipp’s Item Share Feature.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-3-designing-endless-browse-a36ed4faeaaf" target="_new">Case study — Designing Endless Browse.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-designing-foodpanda-7241501f4150" target="_new">Case study — Designing for Foodpanda.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/collection-of-my-ux-portfolio-a7c7d60b1067" target="_new">Collection of my design projects at Ola, Scandid</a></li>
             </ul>
             <p class="git">Get in touch</p>
