--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <li><a href="https://medium.com/@RohitRMehta/case-study-2-designing-flipps-item-share-feature-f62ba5564fcd" target="_new">Case study — Designing Flipp’s Item Share Feature.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-3-designing-endless-browse-a36ed4faeaaf" target="_new">Case study — Designing Endless Browse.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-designing-foodpanda-7241501f4150" target="_new">Case study — Designing for Foodpanda.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-1-debit-card-payments-c6a8844850bf" target="_new">Case study — Debit card payments for Ola Cabs.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-2-kyc-verification-ola-money-58c79cbb911b" target="_new">Case study — Designing for KYC Verification for Ola Caba and Ola Money.</a></li>
+                <li><a href="https://medium.com/@RohitRMehta/case-study-olacabs-drop-location-on-pwa-progressive-web-app-ola-lite-62071cfc12b0" target="_new">Case study — Drop location on Ola lite.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/collection-of-my-ux-portfolio-a7c7d60b1067" target="_new">Collection of my design projects at Ola, Scandid</a></li>
             </ul>
             <p class="git">Get in touch</p>
