--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width initial-scale=1">
 
-      <title>Rohit Mehta | UX Designer</title>
+      <title>Rohit Mehta | Product Designer</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
       <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'>
       <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
