--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="https://medium.com/@RohitRMehta/case-study-1-debit-card-payments-c6a8844850bf" target="_new">Case study — Debit card payments for Ola Cabs.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-2-kyc-verification-ola-money-58c79cbb911b" target="_new">Case study — Designing for KYC Verification for Ola Caba and Ola Money.</a></li>
                 <li><a href="https://medium.com/@RohitRMehta/case-study-olacabs-drop-location-on-pwa-progressive-web-app-ola-lite-62071cfc12b0" target="_new">Case study — Drop location on Ola lite.</a></li>
-                <li><a href="https://medium.com/@RohitRMehta/collection-of-my-ux-portfolio-a7c7d60b1067" target="_new">Collection of my design projects at Ola, Scandid</a></li>
+<!--                 <li><a href="https://medium.com/@RohitRMehta/collection-of-my-ux-portfolio-a7c7d60b1067" target="_new">Collection of my design projects at Ola, Scandid</a></li> -->
             </ul>
             <p class="git">Get in touch</p>
             <ul class="git-block">
