--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container animated fadeInUp">
             <h1 class="name">Rohit Mehta</h1>
             <h3 class="title ">Product Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
-            <p class="desc">Designer based out of Toronto, Canada. <br/><br/>Currently, Senior Product Designer with Compass Digital Labs. Previously Flipp, Oracle, Olacabs, Scandid.
+            <p class="desc">Designer based out of Toronto, Canada. <br/><br/>Currently, Senior Product Designer with Compass Digital Labs.<br/>Previously Flipp, Oracle, Olacabs, Scandid.
             </p>
             <h2>Case studies</h2>
             <ul class="case-study">
