--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
       <title>Rohit Mehta | Product Designer</title>
       <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-      <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'>
-      <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+<!--       <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'> -->
+<!--       <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> -->
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
       <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
