--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 
     <body>
         <div class="container animated fadeInUp">
-            <h1 class="name" style="    background: linear-gradient(92.05deg, #BCA1F7 12.09%, #E577B4 42.58%, #FF7170 84.96%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;">Rohit Mehta</h1>
+            <h1 class="name">Rohit Mehta</h1>
             <h3 class="title ">Product Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
             <p class="desc">Designer based out of Toronto, Canada. Currently, Senior Product Designer with Compass Digital Labs.</p><p>Previously Flipp, Oracle, Olacabs, Scandid.
             </p>
