--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container animated fadeInUp">
             <h1 class="name">Rohit Mehta</h1>
             <h3 class="title ">Product Designer</h3><!-- <a href="#" class="co-link">Scandid</a> -->
-            <p class="desc">Designer based out of Toronto, Canada. Currently, Senior Product Designer with Compass Digital Labs.</p><p>Previously Flipp, Oracle, Olacabs, Scandid.
+            <p class="desc">Designer based out of Toronto, Canada. Senior Product Designer at <a href="https://freshii.com/" target="_new">Freshii</a>.</p><p>Previously Flipp, Oracle, Olacabs, Scandid.
             </p>
             <h2>Case studies</h2>
             <ul class="case-study">
