--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Literata', Georgia, serif;
-            background: #0a0a0a;
+            background: #0c0c0c;
             color: #e8e8e8;
             line-height: 1.65;
             font-size: 18px;
@@ -24,7 +24,7 @@
         }
 
         .container {
-            max-width: 650px;
+            max-width: 35%;
             margin: 0 auto;
             padding: 100px 24px 80px;
         }
@@ -163,7 +163,7 @@
         <h2>Links</h2>
         <ul class="links-list">
             <li>
-                <a href="https://rohit.design" target="_blank" rel="noopener">
+                <a href="https://www.figma.com/proto/opeOT4DR1LHe1SqWjXKfS4/Rohit---Portfolio-Deck?page-id=0%3A1&node-id=3-30115&p=f&viewport=1919%2C319%2C0.06&t=oxQpEmktUWWErusz-1&scaling=contain&content-scaling=fixed" target="_blank" rel="noopener">
                     <div class="link-title">Portfolio</div>
                     <p class="link-desc">Design work and case studies</p>
                 </a>
@@ -178,12 +178,6 @@
                 <a href="https://linkedin.com/in/rohitrmehta" target="_blank" rel="noopener">
                     <div class="link-title">LinkedIn</div>
                     <p class="link-desc">Connect on LinkedIn</p>
-                </a>
-            </li>
-            <li>
-                <a href="tel:+16478815643">
-                    <div class="link-title">Phone</div>
-                    <p class="link-desc">(647) 881-5643</p>
                 </a>
             </li>
         </ul>
