--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         body {
             font-family: 'Literata', Georgia, serif;
-            background: #0c0c0c;
-            color: #e8e8e8;
+            background: #F7F0DF;
+            color: #4B3501;
             line-height: 1.65;
             font-size: 18px;
             -webkit-font-smoothing: antialiased;
@@ -45,17 +45,17 @@
 
         p {
             margin-bottom: 20px;
-            color: #d0d0d0;
+            color: #4B3501;
         }
 
         a {
-            color: #5b9fff;
-            text-decoration: none;
+            color: #C13700;
+            text-decoration: underline;
             transition: color 0.2s ease;
         }
 
         a:hover {
-            color: #88b8ff;
+            color: #792200;
         }
 
         .intro {
@@ -75,7 +75,7 @@
         }
 
         .company {
-            color: #e8e8e8;
+            color: #4B3501;
             text-decoration: none;
         }
 
@@ -98,12 +98,12 @@
 
         .link-title {
             font-weight: 600;
-            color: #e8e8e8;
+            color: #C13700;
         }
 
         .link-desc {
             font-size: 16px;
-            color: #999;
+            color: #C13700;
             margin-top: 4px;
             margin-bottom: 0;
         }
@@ -141,21 +141,12 @@
 
         <h2>Experience</h2>
         <ul class="experience-list">
-            <li class="experience-item">
-                <a href="https://www.oracle.com/" class="company" target="_blank" rel="noopener">Oracle</a><span class="separator">·</span>Principal Product Designer
-            </li>
-            <li class="experience-item">
-                <a href="https://www.freshii.com/" class="company" target="_blank" rel="noopener">Freshii (Foodtastic)</a><span class="separator">·</span>Senior Product Designer & PM
-            </li>
-            <li class="experience-item">
-                <a href="https://www.compass-group.ca/" class="company" target="_blank" rel="noopener">Compass Digital Labs</a><span class="separator">·</span>Senior Product Designer
-            </li>
-            <li class="experience-item">
-                <a href="https://www.flipp.com/" class="company" target="_blank" rel="noopener">Flipp</a><span class="separator">·</span>Senior Product Designer
-            </li>
-            <li class="experience-item">
-                <a href="https://www.olacabs.com/" class="company" target="_blank" rel="noopener">Ola Cabs</a><span class="separator">·</span>Senior Product Designer
-            </li>
+            <li class="experience-item">Oracle<span class="separator">·</span>Principal Product Designer</li>
+            <li class="experience-item">Freshii // Foodtastic <span class="separator">·</span>Senior Product Designer</li>
+            <li class="experience-item">Compass Digital Labs <span class="separator">·</span>Senior Product Designer</li>
+            <li class="experience-item">Flipp <span class="separator">·</span>Senior Product Designer</li>
+            <li class="experience-item">Ola Cabs <span class="separator">·</span>Senior Product Designer</li>
+            <li class="experience-item">Scandid <span class="separator">·</span>Founding Designer</li>
         </ul>
 
         <h2>Links</h2>
