--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         body {
             font-family: 'Literata', Georgia, serif;
-            background: #F7F0DF;
-            color: #4B3501;
+            background: #D53232;
+            color: #ffffff;
             line-height: 1.65;
             font-size: 18px;
             -webkit-font-smoothing: antialiased;
@@ -45,17 +45,17 @@
 
         p {
             margin-bottom: 20px;
-            color: #4B3501;
+            color: #ffffff;
         }
 
         a {
-            color: #C13700;
+            color: #ffffff;
             text-decoration: underline;
             transition: color 0.2s ease;
         }
 
         a:hover {
-            color: #792200;
+            color: #ffffff;
         }
 
         .intro {
@@ -75,12 +75,12 @@
         }
 
         .company {
-            color: #4B3501;
+            color: #ffffff;
             text-decoration: none;
         }
 
         .company:hover {
-            color: #5b9fff;
+            color: #ffffff;
         }
 
         .separator {
@@ -98,12 +98,12 @@
 
         .link-title {
             font-weight: 600;
-            color: #C13700;
+            color: #ffffff;
         }
 
         .link-desc {
             font-size: 16px;
-            color: #C13700;
+            color: #ffffff;
             margin-top: 4px;
             margin-bottom: 0;
         }
@@ -139,16 +139,6 @@
             <p>Earlier in my career, I led end-to-end design for large-scale, business-critical products at companies like Freshii, Compass Group Canada, and Ola. This included spearheading the complete redesign of Freshii’s mobile and web ordering platforms as a one-person design team, taking on an additional Product Manager role to lead initiatives across multiple Foodtastic brands, and driving high-impact, time-sensitive payments and fintech products at Ola. I’ve also led growth and loyalty squads, mentored designers, built and scaled design systems, and was a founding team member at Scandid, where I shaped the product from the ground up and pitched it on global startup platforms.</p>
         </div>
 
-        <h2>Experience</h2>
-        <ul class="experience-list">
-            <li class="experience-item">Oracle<span class="separator">·</span>Principal Product Designer</li>
-            <li class="experience-item">Freshii // Foodtastic <span class="separator">·</span>Senior Product Designer</li>
-            <li class="experience-item">Compass Digital Labs <span class="separator">·</span>Senior Product Designer</li>
-            <li class="experience-item">Flipp <span class="separator">·</span>Senior Product Designer</li>
-            <li class="experience-item">Ola Cabs <span class="separator">·</span>Senior Product Designer</li>
-            <li class="experience-item">Scandid <span class="separator">·</span>Founding Designer</li>
-        </ul>
-
         <h2>Links</h2>
         <ul class="links-list">
             <li>
@@ -170,6 +160,18 @@
                 </a>
             </li>
         </ul>
+
+        <h2>Experience</h2>
+        <ul class="experience-list">
+            <li class="experience-item">Oracle<span class="separator">·</span>Principal Product Designer<span class="separator">·</span>2024-Present</li>
+            <li class="experience-item">Freshii // Foodtastic <span class="separator">·</span>Senior Product Designer<span class="separator">·</span>2021-2024</li>
+            <li class="experience-item">Compass Digital Labs <span class="separator">·</span>Senior Product Designer<span class="separator">·</span>2020-2021</li>
+            <li class="experience-item">Flipp <span class="separator">·</span>Senior Product Designer<span class="separator">·</span>2019</li>
+            <li class="experience-item">Ola Cabs <span class="separator">·</span>Senior Product Designer<span class="separator">·</span>2017-2018</li>
+            <li class="experience-item">Scandid <span class="separator">·</span>Founding Designer<span class="separator">·</span>2013-2017</li>
+        </ul>
+
+        
     </div>
 </body>
 </html>
